build: "Use caching to optimize testing."

--- a/.github/actions/setup-builder/action.yaml
+++ b/.github/actions/setup-builder/action.yaml
@@ -30,6 +30,7 @@ runs:
       run: |
         apt-get update
         apt-get install -y protobuf-compiler
+        apt-get install llvm libclang-dev
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
