--- a/.github/actions/setup-builder/action.yaml
+++ b/.github/actions/setup-builder/action.yaml
@@ -31,6 +31,7 @@ runs:
         apt-get update
         apt-get install -y protobuf-compiler
         apt-get install -y llvm libclang-dev
+        apt-get install -y cmake
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
