--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Integration Testing
+name: Code Style
 
 on:
   push:
@@ -56,27 +56,6 @@ jobs:
             ./target/
           key: cargo-cache-${{ hashFiles('**/Cargo.toml', '**/Cargo.lock') }}  # Run tests
 
-  linux-tests:
-    name: cargo test
-    needs: [ linux-build-lib ]
-    runs-on: ubuntu-latest
-    container:
-      image: amd64/rust
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-      - name: Setup Rust toolchain
-        uses: ./.github/actions/setup-builder
-      - name: Install cargo-nextest
-        uses: baptiste0928/cargo-install@v1
-        with:
-          crate: cargo-nextest
-          locked: true
-      - uses: actions/checkout@v3
-      - name: Run tests
-        run: make test
-
   rustfmt:
     runs-on: ubuntu-latest
     steps:
@@ -88,6 +67,7 @@ jobs:
       - name: Install rustfmt
         run: rustup component add rustfmt
       - uses: actions-rs/cargo@v1
+        name: rust-fmt
         with:
           command: fmt
           args: --all -- --check
@@ -106,6 +86,7 @@ jobs:
       - name: Install clippy
         run: rustup component add clippy
       - uses: actions-rs/cargo@v1
+        name: rust-clippy
         with:
           command: clippy
           args: --all -- --deny warnings
