--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -64,6 +64,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
+      - name: install rustfmt
+        run:  rustup component add rustfmt
       - uses: actions-rs/cargo@v1
         name: rust-fmt
         with:
@@ -84,7 +86,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         name: cargo deny check
         with:
-          command: check
+          command: deny check
           args: licenses
 
   typos:
@@ -101,6 +103,22 @@ jobs:
       - name: typos check
         run: typos
 
+  # this is compiling check
+  cargo-check:
+    needs: [ linux-build-lib ]
+    container:
+      image: amd64/rust
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Rust toolchain
+        uses: ./.github/actions/setup-builder
+      - name: cargo check
+        uses: actions-rs/cargo@v1
+        with:
+          command: check
+          args: --all
+
   clippy:
     needs: [ linux-build-lib ]
     container:
@@ -110,6 +128,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
+      - name: Install clippy
+        run:  rustup component add clippy
       - uses: actions-rs/cargo@v1
         name: rust-clippy
         with:
