--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -83,11 +83,8 @@ jobs:
         uses: ./.github/actions/setup-builder
       - name: Install cargo-deny
         run: cargo install cargo-deny@0.16.2
-      - uses: actions-rs/cargo@v1
-        name: cargo deny check
-        with:
-          command: deny check
-          args: licenses
+      - name: cargo deny check
+        run: cargo-deny check licenses
 
   typos:
     needs: [ linux-build-lib ]
@@ -104,7 +101,7 @@ jobs:
         run: typos
 
   # this is compiling check
-  cargo-check:
+  cargo-compile-check:
     needs: [ linux-build-lib ]
     container:
       image: amd64/rust
