--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Install cargo-nextest
         uses: baptiste0928/cargo-install@v1
         with:
-          crate: cargo-nextest@0.9.84
+          crate: cargo-nextest
           locked: true
       - uses: actions/checkout@v3
       - name: Run tests
