--- a/src/common/rocksdb-engine/Cargo.toml
+++ b/src/common/rocksdb-engine/Cargo.toml
@@ -25,6 +25,7 @@ serde_json.workspace = true
 common-base.workspace = true
 log.workspace = true
 rocksdb.workspace = true
+dashmap.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
