--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -73,4 +73,4 @@ jobs:
           locked: true
       - uses: actions/checkout@v3
       - name: Run tests
-        run: make unit-test
+        run: make test
