--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -52,7 +52,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             ./target/
-          key: cargo-cache-${{ hashFiles('**/Cargo.toml', '**/Cargo.lock') }} 
+          key: cargo-cache-${{ hashFiles('**/Cargo.toml', '**/Cargo.lock') }}
 
   rustfmt:
     runs-on: ubuntu-latest
@@ -63,13 +63,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
-      - name: install rustfmt
-        run:  rustup component add rustfmt
-      - uses: actions-rs/cargo@v1
-        name: rust-fmt
-        with:
-          command: fmt
-          args: --all -- --check
+      - name: cargo rust-fmt
+        run: cargo fmt --all -- --check
 
   deny:
     needs: [ linux-build-lib ]
@@ -110,10 +105,7 @@ jobs:
       - name: Setup Rust toolchain
         uses: ./.github/actions/setup-builder
       - name: cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --all
+        run:  cargo check --all
 
   clippy:
     needs: [ linux-build-lib ]
@@ -126,8 +118,5 @@ jobs:
         uses: ./.github/actions/setup-builder
       - name: Install clippy
         run:  rustup component add clippy
-      - uses: actions-rs/cargo@v1
-        name: rust-clippy
-        with:
-          command: clippy
-          args: --all-targets --all-features --tests --benches -- -D warnings
+      - name: rust-clippy
+        run: cargo clipyy --all-targets --all-features --tests --benches -- -D warnings
